--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ jobs:
         with:
           name: image
           path: image.tar
-  # Job that tests the image
-  test:
-    name: Test the Docker image
+  # Jobs that test the image and the embedded tools
+  test-shell:
+    name: Test Shell language
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -49,8 +49,13 @@ jobs:
           name: image
       - name: Load the image
         run: docker image load -i image.tar
+      - name: Cache sonar-scanner data
+        uses: actions/cache@v2
+        with:
+          path: .sonarcache
+          key: sonar-scanner-cache
       # Run the tests
-      - name: Test docker image
+      - name: Run ShellCheck
         run: ./tests/run_tests.bash
   # Job that runs the Dockerfile linter
   lint-Dockerfile:
