Enhance the tests and the test step in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,23 @@ jobs:
         with:
           path: .sonarcache
           key: sonar-scanner-cache
-      # Run the tests with a develop version of the server
+      # Run the tests (with the appropriate server image)
       - name: Test docker image
-        run: SONARQUBE_TAG=develop ./tests/run_tests.bash
+        run: |
+          echo "Retrieving the branch name..."
+          branch=${{ github.ref }}
+          branch=${branch#*/}
+          branch=${branch#*/}
+          echo "Cloning the server repo on branch $branch..."
+          if ! git clone https://github.com/lequal/sonarqube.git -b "$branch" tmpserver;
+          then
+            echo "No branch $branch found on the server repository, using develop"
+            git clone https://github.com/lequal/sonarqube.git -b develop tmpserver
+          fi
+          echo "Building the server image..."
+          docker build -t lequal/sonarqube:latest tmpserver/
+          echo "Testing the scanner image..."
+          ./tests/run_tests.bash
   # Job that runs the Dockerfile linter
   lint-Dockerfile:
     name: Run hadolint on the Dockerfile
