--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,4 +82,12 @@ jobs:
           echo "Building the server image..."
           docker build -t lequal/sonarqube:latest tmpserver/
           echo "Testing the scanner image..."
-          ./tests/run_tests.bash
+          ./tests/run_tests.bash |& sed -e '/Waiting for CNES SonarQube to be ready./ d' | tee -a tests_logs.txt
+      # Publish test results in the pull request discussion
+      - name: Comment the Pull Request
+        if: github.event_name == 'pull_request'
+        uses: marocchino/sticky-pull-request-comment@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          header: CI tests results
+          path: tests_logs.txt
