Add default filename for pylint report

--- a/conf/sonar-scanner.properties
+++ b/conf/sonar-scanner.properties
@@ -11,3 +11,4 @@
 sonar.cxx.cppcheck.reportPath=cppcheck-report.xml
 sonar.cxx.vera.reportPath=vera-report.xml
 sonar.cxx.rats.reportPath=rats-report.xml
+sonar.python.pylint.reportPath=pylint-report.txt
