--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# ignore sonar-scanner folder
+# Ignore sonar-scanner and pytest folders
 .sonarcache/
 .scannerwork/
+__pycache__/
+.pytest_cache/
 
-# ignore results of tools
+# Ignore results of tools
 tmp*results.*
 *.o
 infer-out/
+
+# Ignore virtual environment
+env/
