add manual trigger for github-action ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,12 @@ on:
     branches:
       - '*'
     paths-ignore:
-      - '*.md'
-
+      - '*.md' 
+  workflow_dispatch:
+    branches:
+      - '*'
+    paths-ignore:
+      - '*.md' 
 # Variables to configure the workflow
 env:
   DOCKERFILE_PATH: '.'
