--- a/tests/vhdl/sonar-project.properties
+++ b/tests/vhdl/sonar-project.properties
@@ -2,15 +2,14 @@
 sonar.projectKey=demo_project_plasma
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=demo_project_plasma
-sonar.projectVersion=1.3
+sonar.projectVersion=1.5
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set. 
 # If not set, SonarQube starts looking for source code from the directory containing 
 # the sonar-project.properties file.
 sonar.sources=./trunk/vhdl/
-sonar.vhdl.topEntities=PLASMA
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
-sonar.language=vhdl
+sonar.vhdlrc.topEntities=plasma
+sonar.vhdlrc.ghdlscript=./trunk/vhdl/ghdl-yoysyRC.sh
+sonar.vhdlrc.ghdlOptions=-fexplicit -fsynopsys
+sonar.vhdlrc.workdir=build_dir
