remove unused file. add debug properties

--- a/tests/vhdl/sonar-project.properties
+++ b/tests/vhdl/sonar-project.properties
@@ -13,3 +13,8 @@ sonar.vhdlrc.topEntities=plasma
 sonar.vhdlrc.ghdlscript=./trunk/vhdl/ghdl-yoysyRC.sh
 sonar.vhdlrc.ghdlOptions=-fexplicit -fsynopsys
 sonar.vhdlrc.workdir=build_dir
+
+##debug
+sonar.vhdlrc.keepReports=true
+sonar.vhdlrc.keepSource=true
+sonar.vhdlrc.pauseExec=false
