--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,9 +22,9 @@ on:
 
 # Variables to configure the workflow
 env:
-  DOCKERFILE_PATH: '.'
-  DOCKERFILE_FILENAME: 'Dockerfile'
-  DOCKER_IMAGE_NAME: 'lequal/sonar-scanner'
+  DOCKERFILE_PATH: "."
+  DOCKERFILE_FILENAME: "Dockerfile"
+  DOCKER_IMAGE_NAME: "lequal/sonar-scanner"
 
 jobs:
   # Job to test if a new version is ready to be released
