Update pylint & cpp results & add suffixes for cxx

--- a/tests/c_cpp/sonar-project.properties
+++ b/tests/c_cpp/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=c-dummy-project
 sonar.projectName=C Dummy Project
 sonar.projectVersion=1.0
 sonar.sources=src
+sonar.cxx.file.suffixes=.cxx,.cpp,.cc,.c,.hxx,.hpp,.hh,.h
