--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,23 +64,8 @@ jobs:
       # Run the tests (with the appropriate server image)
       - name: Test docker image
         run: |
-          echo "Retrieving the branch name..."
-          if [ "${{ github.event_name }}" = "push" ]
-          then
-            branch=${{ github.ref }}
-            branch=${branch#*/}
-            branch=${branch#*/}
-          else # PR
-            branch=${{ github.head_ref }}
-          fi
-          echo "Cloning the server repo on branch $branch..."
-          if ! git clone https://github.com/cnescatlab/sonarqube.git -b "$branch" tmpserver;
-          then
-            echo "No branch $branch found on the server repository, using develop"
-            git clone https://github.com/cnescatlab/sonarqube.git -b develop tmpserver
-          fi
-          echo "Building the server image..."
-          docker build -t lequal/sonarqube:latest tmpserver/
+          echo "Retrieving the sonarqube image..."
+          docker pull lequal/sonarqube-catlab:latest
           echo "Testing the scanner image..."
           echo -e "Results of the CI pipeline\n" > tests_logs.txt
           cd tests/
