--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,9 +66,7 @@ jobs:
         run: |
           echo "Retrieving the sonarqube-catlab image..."
           docker pull lequal/sonarqube-catlab:latest
-          docker images
           echo "Testing the scanner image..."
-          echo -e "Results of the CI pipeline\n" > tests_logs.txt
           cd tests/
           pip install -r requirements.txt
-          pytest -v -s
+          pytest -v
