Add hadolint to sonar-scanner with test

--- a/conf/sonar-scanner.properties
+++ b/conf/sonar-scanner.properties
@@ -7,6 +7,6 @@
 #----- Default source code encoding
 #sonar.sourceEncoding=UTF-8
 
-#----- Default report path for C/C++ analysis tools
+#----- Default report path for external analysis tools
 sonar.cxx.cppcheck.reportPaths=cppcheck-report.xml
 sonar.python.pylint.reportPaths=pylint-report.txt
